修改相册页面模板

--- a/templates/albums.html
+++ b/templates/albums.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
+<title>{{ escape(handler.settings["website_title"]) }}</title>
 {% end %}
 
 {% block body %}
