--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -29,7 +29,10 @@ body {
   height: 100%;
   background-color: rgb(35, 102, 226);
   background-image:url(/static/img/homebg.jpg);
-  background-size: cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-attachment:fixed;
+  background-size:cover;
 }
 
 body {
