--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
             <h3 class="masthead-brand">{{ escape(handler.settings["website_title"]) }}</h3>
             <nav class="nav nav-masthead justify-content-center">
               <a class="nav-link active" href="/">首页</a>
-              <a class="nav-link" href="/u/123456/albums">我的相册</a>
+              <a class="nav-link" href="/albums">我的相册</a>
               <a class="nav-link" href="/feed">广场</a>
             </nav>
           </div>
@@ -37,8 +37,8 @@
   
         <footer class="mastfoot mt-auto">
           <div class="inner">
-            <p>首页模板来自<a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            <p>丰玉霖 Copyright &copy; 2013-2018</p>
+            <p>首页模板 来自<a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            <p>丰玉霖小组 Copyright &copy; 2013-2018</p>
           </div>
         </footer>
       </div>
