--- a/templates/albums.html
+++ b/templates/albums.html
@@ -8,8 +8,7 @@
 <!--这里是个人相册标题和概要-->
 <section class="jumbotron">
   <div class="container">
-    <h1 class="jumbotron-heading">{{ user.name }}的相册</h1>
-    <p class="lead text-muted">用户的简要描述.</p>
+    <h1 class="jumbotron-heading">{{ user.name }}</h1>
     <p>
       <a href="#" class="btn btn-primary my-2">给我打赏</a>
       <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
@@ -25,24 +24,22 @@
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item">
-            <a class="nav-link" href="./profile">简介</a>
+            <a class="nav-link" href="./profile">关于我</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="">相册集</a>
+            <a class="nav-link disabled">所有照片</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">照片墙</a>
+            <a class="nav-link active" href="">相册</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">视频</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/albums/new">新建相册</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/photos/new">上传照片</a>
+            <a class="nav-link disabled">视频</a>
           </li>
         </ul>
+      </div>
+      <div class="container mt-4 ml-2 text-left">
+        <a class="btn btn-outline-primary btn-sm" href="/photos/new" role="button">上传照片</a>
+        <a class="btn btn-outline-secondary btn-sm" href="/albums/new" role="button">新建相册</a>
       </div>
       <div class="card-body">
         <!-- <h5 class="card-title">空空如也</h5>
@@ -52,16 +49,12 @@
           {% for album in albums%}
           <div class="col-md-3">
             <div class="card mb-3 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=没有封面" alt="Card image cap">
+              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
               <div class="card-body">
-                <p class="card-title">{{ album.album_name }}</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <!-- <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">查看</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">编辑</button>
-                  </div> -->
-                  <small class="text-muted">最近上传于 {{ locale.format_date(album.edit_date, shorter=True) }}</small>
-                </div>
+                <a class="card-title" href="/u/{{ user.id }}/albums/{{ album.album_id }}">{{ album.album_name }}</a>
+                <p>
+                  <small class="card-text text-muted">最近上传于 {{ locale.format_date(album.edit_date, shorter=True) }}</small>
+                </p>
               </div>
             </div>
           </div>
@@ -72,3 +65,5 @@
   </div>
   </div>
 {% end %}
+
+
