--- a/templates/albums.html
+++ b/templates/albums.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>{{ escape(handler.settings["website_title"]) }}</title>
+<link rel="stylesheet" href="/static/css/album.css">
 {% end %}
 
 {% block body %}
@@ -49,7 +50,7 @@
           {% for album in albums%}
           <div class="col-md-3">
             <div class="card mb-3 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
+              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
               <div class="card-body">
                 <a class="card-title" href="/u/{{ user.id }}/albums/{{ album.album_id }}">{{ album.album_name }}</a>
                 <p>
