又写了一个html

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,5 +28,6 @@
     <script src="/static/js/popper.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/holder.min.js"></script>
+    <script src="/static/js/warning.js"></script>
   </body>
 </html>
