--- a/templates/common/module-navbar.html
+++ b/templates/common/module-navbar.html
@@ -12,6 +12,10 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+	  <li>
+        <a href="/login" class="nav-link">
+          <span></span> {username}</a>
+      </li>
       <li>
         <a href="/login" class="nav-link">
           <span></span> 登录</a>
