--- a/templates/feed.html
+++ b/templates/feed.html
@@ -7,6 +7,7 @@
     <link href="theme1.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	{% extends "base.html" %}
 </head>
 <body>
 <div class="container">
