--- a/templates/common/module-navbar.html
+++ b/templates/common/module-navbar.html
@@ -14,7 +14,7 @@
     <ul class="nav navbar-nav navbar-right">
 	  <li>
         <a href="/login" class="nav-link">
-          <span></span> {username}</a>
+          <span></span> user</a>
       </li>
       <li>
         <a href="/login" class="nav-link">
