--- a/templates/common/module-navbar.html
+++ b/templates/common/module-navbar.html
@@ -13,7 +13,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  <li>
-        <a href="/login" class="nav-link">
+        <a href="/profile" class="nav-link">
           <span></span> user</a>
       </li>
       <li>
