--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,17 @@
 {% if error %}
 <span style="color: red">Error: {{ error }}</span><p>
 {% end %}
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <ul class="nav navbar-nav navbar-right">
+    <li>
+      <a href="/profile" class="nav-link">
+        <span></span> {{username}}</a>
+    </li>
+  </ul>
+  </nav>
+</header>
+
 
 <form action="/login" method="POST">
   <div class="form-group">
@@ -17,6 +28,7 @@
     <div class="col-sm-10">
         <input name="password" type="password" class="form-control" id="inputPassword4" />
     </div>
+    <p>{{username}}</p>
   </div>
   {% module xsrf_form_html() %}
   <div class="form-group">
