--- a/templates/feed.html
+++ b/templates/feed.html
@@ -7,11 +7,9 @@
     <link href="theme1.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	{% extends "base.html" %}
 </head>
 <body>
 <div class="container">
-    {% module Dialog() %}
     <div class="row clearfix" >
         <div class="col-md-2 column">
         </div>
@@ -162,13 +160,12 @@
                     type:"POST",//Post方法
                     data:{color:color,name:name},//要往服务器传递的数据
                     success:function(arg){
-                        alert(data[0])
                         var obj = jQuery.parseJSON(arg);//获取的数据一般为json格式，用这个方法来解析数据
                         console.log(obj.status);
                         console.log(obj.message);
                         console.log(obj.data);
-                        alert(data[0])
-                        document.getElementById(arg).innerText = "点赞"+obj.data[0]+"人"
+                        alert(obj.data[0])
+                        $("#mylike3").text("black");
                     },
                     error:function(){//获取失败
                         console.log("failed");
