--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <ul class="nav navbar-nav navbar-right">
     <li>
-      <a href="/profile" class="nav-link">
+      <a href="/pro" class="nav-link">
         <span></span> {{username}}</a>
     </li>
   </ul>
