--- a/templates/pro.html
+++ b/templates/pro.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 
 {% block body %}
-{% if error %}
-<span style="color: red">Error: {{ error }}</span><p>
-{% end %}
+
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <ul class="nav navbar-nav navbar-right">
     <li>
-      <a href="/profile" class="nav-link">
+      <a href="/pro" class="nav-link">
         <span></span> {{username}}</a>
     </li>
   </ul>
@@ -20,7 +18,7 @@
 			<div class="col-md-12 column">
 				<div class="jumbotron">
 					<h1>
-						Hello, {{username}}!
+						Hello,{{username}}!
 					</h1>
 					<p>
 						{{user_description}}
@@ -33,3 +31,4 @@
 		</div>
 	</div>
 </body>
+{% end %}
