--- a/templates/photos_show.html
+++ b/templates/photos_show.html
@@ -1,67 +1,76 @@
 {% extends "base.html" %}
 
 {% block head %}
+<title>{{ escape(handler.settings["website_title"]) }}</title>
+<link rel="stylesheet" href="/static/css/album.css">
 {% end %}
 
 {% block body %}
 <!--这里是个人相册标题和概要-->
-<section class="jumbotron text-center">
+<section class="jumbotron">
   <div class="container">
-    <h1 class="jumbotron-heading">用户{{photos["user_id"]}} 的相册:{{photos["album_id"]}}</h1>
+    <h1 class="jumbotron-heading">{{ user.name }}</h1>
     <p>
       <a href="#" class="btn btn-primary my-2">给我打赏</a>
       <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
     </p>
   </div>
 </section>
-
 <!--这里是相册列表主框架-->
+
+
 <div class="photos py-5 bg-light">
   <div class="container">
-    <!--这里是相册菜单-->
-<!--     <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" href="./profile">简介</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="">相册集</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">照片墙</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">视频</a>
-      </li>
-      
-      <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">操作</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/albums/new">新建相册</a>
-            <a class="dropdown-item" href="/photos/new">上传照片</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">更多设置</a>
-          </div>
-        </li>
-    </ul> -->
-
-    <div class="row">
-  {% for i in range(0,3)%}
-  <div class="col-md-4">
-    <div class="card mb-4 box-shadow">
-      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=没有封面" src="/static/album1.jpg" height="225" width="225"  alt="Card image cap">
+    <div class="card text-center">
+<!--       <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+          <li class="nav-item">
+            <a class="nav-link" href="./profile">关于我</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">所有照片</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="">相册</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">视频</a>
+          </li>
+        </ul>
+      </div>
+      <div class="container mt-4 ml-2 text-left">
+        <a class="btn btn-outline-primary btn-sm" href="/photos/new" role="button">上传照片</a>
+        <a class="btn btn-outline-secondary btn-sm" href="/albums/new" role="button">新建相册</a>
+      </div> -->
       <div class="card-body">
-        <p class="card-text">{{ photos["photo_name"] }} {{i}}</p>
-        <p class="card-text">{{ photos["photo_description"] }}</p>
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary">查看</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">编辑</button>
+        <!-- <h5 class="card-title">空空如也</h5>
+        <p class="card-text">你看起来好像还没有相册，先建个相册吧</p>
+        <a href="#" class="btn btn-primary">新建相册</a> -->
+        <div class="row">
+          {% for photo in photos%}
+          <div class="col-md-3">
+            <div class="card mb-3 box-shadow">
+              <a href="http://www.baidu.com">
+              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/img/{{photo.file_name}}" alt="Card image cap"></a>
+              
+              <div class="card-body align-items-left">
+                <div class="d-flex justify-content-between align-items-left">
+                  <div class="btn-group">
+                      <a href="/u/{{ user.id }}/albums/{{ album.album_id }}/edit" class="btn btn-primary">编辑</a>
+                      <small class="text-muted">创建于{{ photo.update_date }}</small>
+                  </div>
+                  
+                </div>
+              </div>
+        
+            </div>
           </div>
-          <small class="text-muted">{{2 * i}} 张照片，创建于{{ photos["update_date"] }}</small>
+          {% end %}
         </div>
       </div>
     </div>
   </div>
-  {% end %}
-</div>
+  </div>
 {% end %}
+
+
