--- a/templates/PhotoListHandler.html
+++ b/templates/PhotoListHandler.html
@@ -37,28 +37,28 @@
   <div class="carousel-inner">
     {%if len(route)==1%}
     <div class="carousel-item active"> 
-      <img src={{route[0]}}>
+      <img src='/static/images/'+'{{route[0].file_name}}'>
       <div class="carousel-caption">
-        <h3>第一张图片描述标题</h3>
-        <p>描述文字!</p>
+        <h3>{{route[0].photo_name}}</h3>
+        <p>{{route[0].photo_description}}</p>
         </div>
     </div>
     {%end%}
     {%if len(route)>1%}
     <div class="carousel-item active">
-      <img src={{route[0]}}>
+      <img src='/static/images/'+'{{route[0].file_name}}'>
       <div class="carousel-caption">
-        <h3>第一张图片描述标题</h3>
-        <p>描述文字!</p>
+        <h3>{{route[0].photo_name}}</h3>
+        <p>{{route[0].photo_description}}</p>
         </div>
     </div>
     {%end%}
     {%for i in range(len(route)-1)%}
     <div class="carousel-item">
-      <img src={{route[i+1]}}>
+      <img src='/static/images/'+'{{route[i+1].file_name}}'>
       <div class="carousel-caption">
-        <h3>第一张图片描述标题</h3>
-        <p>描述文字!</p>
+        <h3>{{route[i+1].photo_name}}</h3>
+        <p>{{route[i+1].photo_description}}</p>
         </div>
     </div>
     {%end%}
