--- a/templates/PhotoListHandler.html
+++ b/templates/PhotoListHandler.html
@@ -37,7 +37,7 @@
   <div class="carousel-inner">
     {%if len(route)==1%}
     <div class="carousel-item active"> 
-      <img src='/static/images/'+'{{route[0].file_name}}'>
+      <img src='/static/images/{{route[0].file_name}}'>
       <div class="carousel-caption">
         <h3>{{route[0].photo_name}}</h3>
         <p>{{route[0].photo_description}}</p>
@@ -46,7 +46,7 @@
     {%end%}
     {%if len(route)>1%}
     <div class="carousel-item active">
-      <img src='/static/images/'+'{{route[0].file_name}}'>
+      <img src='/static/images/{{route[0].file_name}}'>
       <div class="carousel-caption">
         <h3>{{route[0].photo_name}}</h3>
         <p>{{route[0].photo_description}}</p>
@@ -55,7 +55,7 @@
     {%end%}
     {%for i in range(len(route)-1)%}
     <div class="carousel-item">
-      <img src='/static/images/'+'{{route[i+1].file_name}}'>
+      <img src='/static/images/{{route[i+1].file_name}}'>
       <div class="carousel-caption">
         <h3>{{route[i+1].photo_name}}</h3>
         <p>{{route[i+1].photo_description}}</p>
