完成修改warning.js by剑

--- a/templates/shangchuan.html
+++ b/templates/shangchuan.html
@@ -42,7 +42,7 @@
                     <td><div class="checkbox">
                             <label>
                                 <input type="hidden" name="box1" value="0">
-                              <input type="checkbox" name="box1" value="1">上传请打勾
+                              <input type="checkbox" name="box1" id="id_box1" value="1">上传请打勾
                             </label>
                           </div></td>
                           <td><div class="checkbox">
