--- a/templates/photos_show.html
+++ b/templates/photos_show.html
@@ -50,13 +50,13 @@
           {% for photo in photos%}
           <div class="col-md-3">
             <div class="card mb-3 box-shadow">
-              <a href="http://www.baidu.com">
+              <a href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/{{ photo.photo_id }}">
               <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/img/{{photo.file_name}}" alt="Card image cap"></a>
               
               <div class="card-body align-items-left">
                 <div class="d-flex justify-content-between align-items-left">
                   <div class="btn-group">
-                      <a href="/u/{{ user.id }}/albums/{{ album.album_id }}/edit" class="btn btn-primary">编辑</a>
+                      <a href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/{{ photo.photo_id }}" class="btn btn-primary">编辑</a>
                       <small class="text-muted">创建于{{ photo.update_date }}</small>
                   </div>
                   
