--- a/templates/albums.html
+++ b/templates/albums.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <ul class="nav navbar-nav navbar-right">
+    <li>
+      <a href="/login" class="nav-link">
+        <span></span> {{username}}</a>
+    </li>
+  </ul>
+  </nav>
+</header>
+
 {% block head %}
 <title>{{ escape(handler.settings["website_title"]) }}</title>
 <link rel="stylesheet" href="/static/css/album.css">
