--- a/templates/shangchuan.html
+++ b/templates/shangchuan.html
@@ -36,7 +36,7 @@
                 <tbody>
                   <tr class="act1">
                     <td>图片1</td>
-                    <td><input id="fk1" type="file" name="fk0"  /></td>
+                    <td><input id="fk0" type="file" name="fk0"  /></td>
                     <td><input type="text" name="nameee1"></td>
                     <td><input type="text" name="description1"></td>
                     <td><div class="checkbox">
@@ -54,13 +54,13 @@
                          </tr>
                   <tr class="act2">
                     <td>图片2</td>
-                    <td><input id="fk2" type="file" name="fk1"  /></td>
+                    <td><input id="fk1" type="file" name="fk1"  /></td>
                     <td><input type="text" name="nameee2"></td>
                     <td><input type="text" name="description2"></td>
                     <td><div class="checkbox">
                             <label>
                                 <input type="hidden" name="box2" value="0">
-                              <input type="checkbox" name="box2" value="1">上传请打勾
+                              <input type="checkbox" name="box2" id="id_box2" value="1">上传请打勾
                             </label>
                           </div></td>
                           <td><div class="checkbox">
@@ -71,7 +71,7 @@
                           </div></td></tr>
                   <tr class="act3">
                     <td>图片3</td>
-                    <td><input id="fk3" type="file" name="fk2"  /></td>
+                    <td><input id="fk2" type="file" name="fk2"  /></td>
                     <td><input type="text" name="nameee3"></td>
                     <td><input type="text" name="description3"></td>
                     <td><div class="checkbox">
@@ -88,8 +88,7 @@
                           </div></td></tr>
                   <tr class="act4">
                     <td>图片4</td>
-                    <td><input type="hidden" name="fk3" value="0">
-                      <input id="fk4" type="file" name="fk3" value="1" /></td>
+                    <td><input  id="fk3" type="file" name="fk3" value="1" /></td>
                     <td><input type="text" name="nameee4"></td>
                     <td><input type="text" name="description4"></td>
                     <td><div class="checkbox">
