完成唐永剑 个人部分

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,6 @@
     <script src="/static/js/popper.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/holder.min.js"></script>
-    <script src="/static/js/warning.js"></script>
+    <script src="/static/js/upload_warning.js"></script>
       </body>
 </html>
