--- a/templates/shangchuan.html
+++ b/templates/shangchuan.html
@@ -88,7 +88,7 @@
                           </div></td></tr>
                   <tr class="act4">
                     <td>图片4</td>
-                    <td><input  id="fk3" type="file" name="fk3" value="1" /></td>
+                    <td><input  id="fk3" type="file" name="fk3"  /></td>
                     <td><input type="text" name="nameee4"></td>
                     <td><input type="text" name="description4"></td>
                     <td><div class="checkbox">
