--- a/templates/common/module-navbar.html
+++ b/templates/common/module-navbar.html
@@ -13,6 +13,11 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
+          <a href="/pro" class="nav-link">
+            <span></span> 用户</a>
+        </li>
+      <li>
+      <li>
         <a href="/login" class="nav-link">
           <span></span> 登录</a>
       </li>
