--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+
 {% block body %}
 <form action="/signup" method="POST">
   <div class="form-group">
@@ -19,7 +20,13 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
-        <input name="password" type="text" class="form-control" id="inputPassword3" />
+        <input name="password" type="password" class="form-control" id="inputPassword3" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword4" class="col-sm-2 control-label">Password_again</label>
+    <div class="col-sm-10">
+        <input name="password_again" type="password" class="form-control" id="inputPassword4" />
     </div>
   </div>
   <div class="form-group">
