--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,8 @@
             <h3 class="masthead-brand">{{ escape(handler.settings["website_title"]) }}</h3>
             <nav class="nav nav-masthead justify-content-center">
               <a class="nav-link active" href="/">首页</a>
+              <a class="nav-link" href="/login">登录</a>
+              <a class="nav-link" href="/signup">注册</a>
               <a class="nav-link" href="/albums">我的相册</a>
               <a class="nav-link" href="/feed">广场</a>
             </nav>
