--- a/templates/albums.html
+++ b/templates/albums.html
@@ -38,33 +38,53 @@
           </li>
         </ul>
       </div>
-      <div class="container mt-4 ml-2 text-left">
+      {%if albums %}
+      <div class="container mt-4 mr-4 text-right">
         <a class="btn btn-outline-primary btn-sm" href="/photos/new" role="button">上传照片</a>
         <a class="btn btn-outline-secondary btn-sm" href="/albums/new" role="button">新建相册</a>
       </div>
+      {%end%}
       <div class="card-body">
-        <!-- <h5 class="card-title">空空如也</h5>
+        {%if not albums %}
+        <h5 class="card-title">空空如也</h5>
         <p class="card-text">你看起来好像还没有相册，先建个相册吧</p>
-        <a href="#" class="btn btn-primary">新建相册</a> -->
+        <a href="/albums/new" class="btn btn-primary">新建相册</a>
+        {% else %}
+
         <div class="row">
           {% for album in albums%}
           <div class="col-md-3">
+
+
             <div class="card mb-3 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
+              <a href="/u/{{ user.id }}/albums/{{ album.album_id }}">
+                <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "
+                  src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
+              </a>
+
               <div class="card-body">
-                <a class="card-title" href="/u/{{ user.id }}/albums/{{ album.album_id }}">{{ album.album_name }}</a>
-                <p>
-                  <small class="card-text text-muted">最近上传 {{locale.format_date(album.edit_date, shorter=True,relative=True) }}</small>
-                </p>
+                <a class="card-title font-weight-bold" href="/u/{{ user.id }}/albums/{{ album.album_id }}">{{ album.album_name }}</a>
+                <div class="mt-2 d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a class="btn btn-sm btn-outline-secondary" href="/u/{{ user.id }}/albums/{{ album.album_id }}/edit">编辑</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="/u/{{ user.id }}/albums/{{ album.album_id }}/delete">删除</a>
+                  </div>
+                  <small class="text-muted">{{ photos_num[album.album_id] }}张照片</small>
+                </div>
+              </div>
+
+
+              <div class="card-footer">
+                <small>最近上传 {{ locale.format_date(album.edit_date, full_format=True, shorter=True,relative=False ) }}</small>
               </div>
             </div>
           </div>
-          {% end %}
+          {% end %} {% end %}
         </div>
       </div>
     </div>
   </div>
-  </div>
+</div>
 {% end %}
 
 
