修改一下网页底部

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,7 @@
     </main>
     <!--这里是页面底部-->
     {% block bottom %}{% end %}
-     {% module Bottom() %}
-  
+    {% include common/module-bottom.html %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     
