--- a/templates/albums.html
+++ b/templates/albums.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<title>{{ escape(handler.settings["website_title"]) }}</title>
+<title>{{ user.nickname }}的相册 | {{ escape(handler.settings["website_title"]) }}</title>
 <link rel="stylesheet" href="/static/css/album.css">
 {% end %}
 
@@ -9,7 +9,7 @@
 <!--这里是个人相册标题和概要-->
 <section class="jumbotron">
   <div class="container">
-    <h1 class="jumbotron-heading">{{ user.name }}</h1>
+    <h1 class="jumbotron-heading">{{ user.nickname }}</h1>
     <p>
       <a href="#" class="btn btn-primary my-2">给我打赏</a>
       <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
@@ -17,7 +17,6 @@
   </div>
 </section>
 <!--这里是相册列表主框架-->
-
 
 <div class="album py-5 bg-light">
   <div class="container">
@@ -58,7 +57,7 @@
 
             <div class="card mb-3 box-shadow">
               <a href="/u/{{ user.id }}/albums/{{ album.album_id }}">
-                <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "
+                <img class="card-img-top " data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "
                   src="/static/images/min/{{album.cover_id}}.jpg" alt="Card image cap">
               </a>
 
