--- a/templates/albums.html
+++ b/templates/albums.html
@@ -18,6 +18,7 @@
 </section>
 <!--这里是相册列表主框架-->
 
+
 <div class="album py-5 bg-light">
   <div class="container">
     <div class="card text-center">
@@ -27,10 +28,10 @@
             <a class="nav-link" href="./profile">关于我</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">所有照片</a>
+            <a class="nav-link" href="/u/{{ user.id }}/photos/">所有照片</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="">相册</a>
+            <a class="nav-link active" href="/u/{{ user.id }}/albums/">相册</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled">视频</a>
