--- a/templates/PhotoListHandler.html
+++ b/templates/PhotoListHandler.html
@@ -49,7 +49,7 @@
       <img src='/static/images/{{route[0].file_name}}'>
       <div class="carousel-caption">
         <h3>{{route[0].photo_name}}</h3>
-        <p>{{route[0].photo_description,更新时间:{{route[0].update_date}}}}</p>
+        <p>{{route[0].photo_description}},更新时间:{{route[0].update_date}}</p>
         </div>
     </div>
     {%end%}
