朋友圈完善

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -4,13 +4,14 @@
 <head>
 	<title>朋友圈</title>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>照片编辑</title>
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="theme1.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 {% module Navbar() %}
 </head>
 <body>
+
 <div class="container">
     <div class="row clearfix" >
         <div class="col-md-2 column">
@@ -137,7 +138,7 @@
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
    </div>
-<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+   <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
   <!-- 包括所有已编译的插件 <script src="/static/js/jquery-3.3.1.min.js"></script>-->
