--- a/templates/AlbumCreate.html
+++ b/templates/AlbumCreate.html
@@ -22,7 +22,7 @@
             <div class="form-group">
             <label for="name">相册名称：</label>
             <br>
-            <input id="xcname" type="text" name="name" >
+            <input id="xcname" type="text" name="name"required autofocus >
             </div>
             <div class="form-group">
             <label for="name">相册描述：</label>
