修改完善个人资料页面

--- a/templates/albums.html
+++ b/templates/albums.html
@@ -34,7 +34,7 @@
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item">
-            <a class="nav-link" href="./profile">关于我</a>
+            <a class="nav-link" href="/pro">关于我</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/u/{{ user.id }}/photos/">所有照片</a>
