--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -4,39 +4,39 @@
 {% block body %}
 <form action="/signup" method="POST">
   <div class="form-group">
-     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+     <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
      <div class="col-sm-10">
          <input name="email" type="email" class="form-control" id="inputEmail3" />
      </div>
   </div>
   
   <div class="form-group">
-     <label for="inputName1" class="col-sm-2 control-label">Name</label>
+     <label for="inputName1" class="col-sm-2 control-label">用户名</label>
      <div class="col-sm-10">
          <input name="name" type="text" class="form-control" id="inputname1" />
      </div>
   </div>
   
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
     <div class="col-sm-10">
         <input name="password" type="password" class="form-control" id="inputPassword3" />
     </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword4" class="col-sm-2 control-label">Password_again</label>
+    <label for="inputPassword4" class="col-sm-2 control-label">确认密码</label>
     <div class="col-sm-10">
         <input name="password_again" type="password" class="form-control" id="inputPassword4" />
     </div>
   </div>
   <div class="form-group">
-     <label for="inputName2" class="col-sm-2 control-label">Nickname</label>
+     <label for="inputName2" class="col-sm-2 control-label">昵称</label>
      <div class="col-sm-10">
          <input name="nickname" type="text" class="form-control" id="inputname2" />
      </div>
   </div>
   <div class="form-group">
-     <label for="user_description1" class="col-sm-2 control-label">User_description</label>
+     <label for="user_description1" class="col-sm-2 control-label">用户简介</label>
      <div class="col-sm-10">
          <input name="user_description" type="text" class="form-control" id="user_description1" />
      </div>
@@ -44,7 +44,7 @@
   {% module xsrf_form_html() %}
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Sign up</button>
+        <button type="submit" class="btn btn-default">注册</button>
     </div>
   </div>
 </form>
