--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,13 @@
 {% end %}
 <form action="/login" method="POST">
   <div class="form-group">
-     <label for="inputEmail4" class="col-sm-2 control-label">Email</label>
+     <label for="inputEmail4" class="col-sm-2 control-label">邮箱l</label>
      <div class="col-sm-10">
          <input name="email" type="email" class="form-control" id="inputEmail4" />
      </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword4" class="col-sm-2 control-label">Password</label>
+    <label for="inputPassword4" class="col-sm-2 control-label">密码</label>
     <div class="col-sm-10">
         <input name="password" type="password" class="form-control" id="inputPassword4" />
     </div>
@@ -20,7 +20,7 @@
   {% module xsrf_form_html() %}
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">log in</button>
+        <button type="submit" class="btn btn-default">登录</button>
     </div>
   </div>
 </form>
