--- a/templates/PhotoListHandler.html
+++ b/templates/PhotoListHandler.html
@@ -11,8 +11,7 @@
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
-      width: 100%;
-      height: 100%;
+    margin: 0 auto;
   }
   </style>
 </head>
